--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Chat Bot IO v2",
   "main": "index.js",
   "scripts": {
-    "test-api": "npx jest ./test-api --forceExit --detectOpenHandles",
     "start": "npx webpack-dev-server --mode development",
     "api-start": "node ./api/index.js",
     "dist": "npx webpack --mode production --progress=profile",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -33,9 +33,12 @@
     "eslint-webpack-plugin": "^3.1.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.7.0",
+    "nightwatch": "^3.10.2",
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
+    "supertest": "^7.0.0",
     "webpack": "^5.63.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0"
@@ -51,7 +54,6 @@
     "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.4",
-    "passport": "^0.6.0",
-    "supertest": "^6.3.3"
+    "passport": "^0.6.0"
   }
 }
